--- a/squid.conf
+++ b/squid.conf
@@ -1,3 +1,7 @@
+# Basic configuration for Squid
+http_port 3128
+
+# Allow all connections (for testing purposes, restrict in production)
 acl localnet src 0.0.0.0/0
 http_access allow localnet
 http_access deny all
